--- a/WebApplication3/Views/ContactUs/ContactUs.cshtml
+++ b/WebApplication3/Views/ContactUs/ContactUs.cshtml
@@ -38,7 +38,7 @@
                 </div>
                 <textarea class="contact-input form-control" id="message-input" name="message" placeholder="How can we help?" rows="5"></textarea>
                 <br />
-                <input type="hidden" name="_next" value="equine.cis420.net/ContactUs/ContactUs" />
+                <input type="hidden" name="_next" value="~/ContactUs/ContactUs" />
                 <div class="row">
                     <div class="col-xs-12 col-md-12 form-group">
                         <button class="custom-button btn pull-right" type="submit" value="Send">Send</button>
