added email to interpreter

--- a/WebApplication3/Views/GetInvolved/InterpreterForm.cshtml
+++ b/WebApplication3/Views/GetInvolved/InterpreterForm.cshtml
@@ -37,6 +37,11 @@
         @Html.TextBoxFor(Model => Model.City)
     </div>
 
+    <label>Email</label>
+    <div>
+        @Html.TextBoxFor(Model => Model.Email)
+    </div>
+
     <label>State</label>
     <div>
         @Html.TextBoxFor(Model => Model.State)
